<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyMapsActivity!</string>
    <string name="app_name">MyMaps</string>
    <string name="title_activity_map_viewer">MapViewerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">Image Description</string>

    <!-- welcome screen -->
    <string name="welcome_no_map">Welcome!\n\nStart by opening a WebMap link via on ArcGIS.com or Email or SMS.\n\nOR, Visit Showcase to browse and add maps.</string>
    <string name="welcome_no_wifi">No Internet Connection.</string>

    <!-- internet -->
    <string name="internet_disconnected">No Internet connection</string>
    <string name="internet_connected">Internet connected</string>

    <!-- dashboard menu -->
    <string name="menu_showcase">Showcase</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_reset">Reset</string>

    <!-- longclick dialog -->
    <string name="longclick_title">Please choose an option:</string>
    <string name="longclick_no_option_selected">Please choose an option.</string>
    <string name="longclick_no_folder_selected">Please choose target folder.</string>
    <string name="longclick_delete">Delete</string>
    <string name="longclick_move">Move to</string>
    <string name="longclick_positive">Enter</string>
    <string name="longclick_negative">Cancel</string>

    <string-array name="longclick_delete_options">
        <item>Delete folder &amp; all items.</item>
        <item>Delete the folder &amp; move items.</item>
    </string-array>

    <!-- reset dialog -->
    <string name="reset_title">Reset</string>
    <string name="reset_message">You will lose All WebMap and Folder!</string>
    <string name="reset_positive">Confirm</string>
    <string name="reset_negative">Cancel</string>

    <!-- login dialog -->
    <string name="login_title">Sign In</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_loading">Signing in&#8230;</string>
    <string name="login_success">Sign in Success</string>
    <string name="login_positive">Enter</string>
    <string name="login_negative">Cancel</string>
    <string name="login_empty">Username and password can\'t be empty.</string>

    <!-- create new folder dialog -->
    <string name="create_folder_title">Create New Folder</string>
    <string name="create_folder_name_hint">Name for new folder</string>
    <string name="create_folder_positive">Enter</string>
    <string name="create_folder_negative">Cancel</string>
    <string name="create_folder_home">Home</string>
    <string name="create_folder_empty_name">Folder name can\'t be empty.</string>
    <string name="create_folder_home_name">Child folder can\'t be named \'Home\'.</string>
    <string name="create_folder_duplicate_name">Folder name already exists.</string>

    <!-- map viewer menu -->
    <string name="menu_empty">empty</string>
    <string name="menu_settings">Sensors</string>
    <string name="menu_description">Description</string>
    <string name="menu_basemap">Basemap</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_locating">Location</string>
    <string name="menu_stop_locating">Clean Location</string>
    <string name="menu_geocoding">Geocoding</string>
    <string name="menu_about">About</string>
    <string name="menu_wifi_direct">Find Peer</string>
    <string name="menu_connect">Sync</string>

    <!-- layer control -->
    <string name="layers_graphic_layer">Graphic Layer</string>
    <string name="layers_no_layer">This WebMap is Empty.</string>
    <string name="layers_no_operational_layer">No operational layer available.</string>

    <!-- geocoding -->
    <string name="geocoding_title">Location</string>
    <string name="geocoding_searching">Searching&#8230;</string>
    <string name="geocoding_no_result">No result found.</string>
    <string name="geocoding_geocoder">Geocoder</string>
    <string name="geocoding_tip">Please enter the address:</string>
    <string name="geocoding_url">http://geocode.arcgis.com/arcgis/rest/services/World/GeocodeServer</string>
    <string name="geocoding_default_extent_string">Deafult Extent</string>
    <string name="geocoding_my_loc_string">My Location</string>
    <string name="geocoding_search">Search</string>
    <string name="geocoding_clear">Clear</string>
    <string name="gps_emulator">Can\'t use GPS on emulator&#8230;</string>

    <item name="geocoding_address_id" type="id">geocoding_address</item>
    <item name="geocoding_my_loc_id" type="id">geocoding_my_loc</item>
    <item name="geocoding_default_extent_id" type="id">geocoding_default_extent</item>
    <item name="geocoding_search_id" type="id">geocoding_confirm</item>
    <item name="geocoding_clear_id" type="id">geocoding_clear</item>

    <!-- about -->
    <string name="about_title">Title: </string>
    <string name="about_owner">By: </string>
    <string name="about_created">Date Created: </string>
    <string name="about_modified">Date Modified: </string>
    <string name="about_snippet">Snippet: </string>
    <string name="about_access_level">Access Level: </string>
    <string name="about_num_view">Number of views: </string>
    <string name="about_num_rating">Number of rating: </string>
    <string name="about_avg_rating">Rating: </string>
    <string name="about_credits">Credits: </string>
    <string name="about_esri_credits">Mapping API provided by Esri ArcGIS Runtime API for Android.</string>

    <!-- callout -->
    <string name="callout_title">Popup</string>

    <!-- basemap -->
    <item name="basemap_switch" type="id">basemap_switch</item>

    <string name="DefaultBaseMapLayer">Default Basemap Layer</string>
    <string name="StreetMapMenu">World Street Map</string>
    <string name="TopoMenu">World Topo</string>
    <string name="NatGeoMenu">National Geographic World Map</string>
    <string name="OceanMenu">Ocean Basemap</string>
    <string name="OSMMenu">Open Street Map</string>
    <string name="WORLD_STREET_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer</string>
    <string name="WORLD_TOPO_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer</string>
    <string name="WORLD_NATGEO_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer</string>
    <string name="OCEAN_BASEMAP">http://services.arcgisonline.com/ArcGIS/rest/services/Ocean_Basemap/MapServer</string>

    <!-- bookmark -->
    <string name="no_bookmark">Bookmark Not Available</string>

    <!-- sensors -->
    <string name="compass">Compass</string>
    <string name="compass_tip">Tip: Turn the device to rotate the map.</string>
    <string name="nfc">NFC</string>
    <string name="nfc_tip">Tip: Touch two devices to share the WebMap. Beam it from one device to another.</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="light_sensor_tip">Tip: Turn Auto Brightness Off. Set to maximum brightness.</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gyroscope_tip">Tip: Pan the map when you move the device. Change basemap when you shake the device.</string>
    <string name="gps">GPS</string>
    <string name="gps_tip">Tip: Track your location with GPS.</string>
    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="proximity_sensor_tip">Tip: Sweep your hand to change basemap.</string>
    <string name="voice">Voice</string>
    <string name="voice_toast">Tip: Speak to the map to send commands.</string>
    <string name="voice_tip">Tip: Speak to the map to send commands.\nSample Commands:\ncompass, light, gyro, my location, default extent, nfc, basemap, layers, location, bookmark, about, description, sensors, where am I.</string>
    <string name="voice_command_tip">compass, light, gyro, my location, extent, nfc, base map, layers, location, bookmark, about, description, sensors, where am I</string>

    <!-- bluetooth -->
    <string name="bluetooth_me">My Device</string>
    <string name="bluetooth_peers">Peers</string>
    <string name="bluetooth_disconnect_peer">Disconnect</string>
    <string name="bluetooth_sync_title">Bluetooth Sync</string>
    <string name="bluetooth_connect_fail">Fail to Connect.</string>
    <string name="bluetooth_not_connected">Not Connected.</string>
    <string name="bluetooth_connecting">Connecting&#8230;</string>
    <string name="bluetooth_connected">Connected.</string>
    <string name="bluetooth_enabled">Bluetooth enabled.</string>
    <string name="bluetooth_enabled_problem">Fail to enable Bluetooth, please enable Bluetooth in settings.</string>
    <string name="bluetooth_stop_listen">Stop Listen</string>
    <string name="bluetooth_start_listen">Start Listen</string>
    <string name="bluetooth_find_peer">Search Devices</string>
    <string name="bluetooth_model_discovery">Discover</string>
    <string name="bluetooth_model_listen">Listen</string>
    <string name="bluetooth_model_send">Send</string>
    <string name="bluetooth_model_receive">Receive</string>
    <string name="bluetooth_model_bi">Bidirectional</string>
    <string name="bluetooth_model_choose">Mode:</string>
    <string name="bluetooth_option_choose">Sync:</string>
    <string name="bluetooth_option_extent">Map Extent</string>
    <string name="bluetooth_option_layer">Layers</string>
    <string name="bluetooth_option_popup">Popup</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported in this device.</string>
    <string name="bluetooth_connect_hint">Click to connect.</string>
    <string name="bluetooth_sync_hint">In order to sync, you need to use the same WebMap as the other device. Disconnecting&#8230;</string>

    <!-- voice -->
    <string-array name="voice_commands">
        <item>compass</item>
        <item>light</item>
        <item>gyro</item>
        <item>gps</item>
        <item>my location</item>
        <item>extent</item>
        <item>nfc</item>
        <item>voice</item>
        <item>base map</item>
        <item>layers</item>
        <item>location</item>
        <item>bookmark</item>
        <item>about</item>
        <item>description</item>
        <item>sensors</item>
        <item>find</item>
        <item>where am i</item>
    </string-array>

    <string name="voice_command_compass_on">Compass is on. Rotating the map.</string>
    <string name="voice_command_compass_off">Compass is off</string>
    <string name="voice_command_light_on">Auto Brightness is Off. Set to maximum brightness.</string>
    <string name="voice_command_light_off">Auto Brightness is On.</string>
    <string name="voice_command_gyro_on">Gyro is on, please move the device to pan, or shake the device to change base map.</string>
    <string name="voice_command_gyro_off">Gyro is off.</string>
    <string name="voice_command_my_location">Navigating to your location.</string>
    <string name="voice_command_extent">Navigating to default extent.</string>
    <string name="voice_command_nfc_on">NFC is on.</string>
    <string name="voice_command_nfc_off">NFC is off.</string>
    <string name="voice_command_voice_off">Voice command is off.</string>
    <string name="voice_command_geocoding">You are here at the blue point.</string>
    <string name="voice_command_find">Finding address</string>

</resources>